--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //material spinner
+    implementation 'com.github.ganfra:material-spinner:2.0.0'
+
+    implementation 'net.igenius:customcheckbox:1.3'
 }
