--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="My Reminder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AddNotesActivity" android:label="Add Note"/>
+        <activity
+            android:name=".activity.AddNotesActivity"
+            android:label="Add Note" />
+        <activity android:name=".activity.AddReminderActivity" android:label="Add Reminder"/>
     </application>
 
 </manifest>
