--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.myreminder.srb">
 
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="your.package.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +26,22 @@
         <activity
             android:name=".activity.AddNotesActivity"
             android:label="Add Note" />
-        <activity android:name=".activity.AddReminderActivity" android:label="Add Reminder"/>
+        <activity
+            android:name=".activity.AddReminderActivity"
+            android:label="Add Reminder" />
+        <receiver android:name="AlarmBroadcaster" />
+        <service
+            android:name="NotificationTrigger"
+            android:exported="false" />
+
+        <receiver
+            android:name="DeviceBootReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
